fixed margins on navbar. changed color scheme on sections. The button for navbar on mobile is not visable anymore

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -136,14 +136,31 @@ ul {
 
 }
 
+.navbar {
+    padding: 0;
+}
+
 .navbar-nav {
     align-content: center;
+    color: white;
+    font-size: 20px;
+    font-weight: bold;
     margin: 0 auto;
-    width:31%;
+}
+
+.navbar-toggler-icon {
+    color: white;
+}
+
+.sticky {
+    position: fixed;
+    top: 0;
+    width: 100%
 }
 
 /* Tooltip container */
 .tooltip {
+    font-size: 15px;
     position: relative;
     display: inline-block;
 }
@@ -155,7 +172,6 @@ ul {
 }
 
 .progress {
-        /* height: 2.5vw; */
     margin: 0 0 50px 0;
 }
 
@@ -171,6 +187,7 @@ ul {
     position: relative;
 }
 
+
 .sectionText {
     font-size: 30px;
     margin: 50px auto 50px auto;
@@ -183,9 +200,11 @@ ul {
 }
 
 .sticky {
+    background: rgba(0, 0, 0, 0.164);
     position: fixed;
     top: 0;
-    width: 100%
+    width: 100%;
+    z-index: 3;
 }
 
 
@@ -195,29 +214,37 @@ ul {
 
 
 #about {
-    background: rgba(20, 126, 197, 0.747);
+    background: rgb(20, 126, 197);
 }
 
 #blog {
-    background: rgba(209, 192, 41, 0.781);
+    background: rgb(209, 192, 41);
+}
+
+#contactlink {
+    margin:0;
 }
 
 #content {
-
+    /* background: url(../images/new-profile-pic.jpg);
+    background-size: 100% auto;
+    background-position: 50% 0;
+    background-repeat: no-repeat;
+    background-attachment: fixed; */
 }
 
 #footer {
-    background: rgba(0, 0, 0, 0.753);
+    background: rgb(49, 49, 49);
     text-align: center;
 }
 
-#header {
+/* #header {
     background-color: rgb(75, 72, 72);
     border-bottom: 3px solid #00A1A7;
     width: 100%;
     position: fixed;
     z-index: 11;
-}
+} */
 
 #logo {
     display: inline-block;
@@ -230,9 +257,12 @@ ul {
     text-align: center;
 }
 
+#myHeader {
+    background-color: rgba(5, 4, 3, 0.712);
+}
+
 #navbarNav {
     align-content: center;
-
 }
 
 #profilePic {
@@ -242,16 +272,8 @@ ul {
 }
 
 #projects {
-    background: rgba(243, 51, 51, 0.527);
+    background: rgb(231, 88, 88);
 }
-
-#stickyNav {
-    background: black;
-}
-
-
-
-
 
 
 /* Media Queries */
